[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ika-control"
version = "0.6.1"
description = "Python driver for IKA instruments."
dependencies = [
  "pyserial",
]
authors = [
  {name = "Alex Ruddick", email = "alex@ruddick.tech" },
]
maintainers = [
  {name = "Alex Ruddick", email = "alex@ruddick.tech" },
]
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Development Status :: 4 - Beta",
  "Natural Language :: English",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
  "pytest-cov>=7,<8",
  "pytest-asyncio>=1,<1.3",
  "pytest-xdist==3.*",
  "ruff==0.13.2",
  "mypy==1.18.2",
  "types-pyserial==3.5.0.20250914",
]

[project.scripts]
ika = "ika:command_line"

[project.urls]
Homepage = "https://github.com/alexrudd2/ika"
Issues = "https://github.com/alexrudd2/ika/issues"

[tool.setuptools]
packages = ["ika"]

[tool.ruff]
extend-exclude = ["venv*"]
line-length = 99
target-version = "py38"

[tool.ruff.lint]
ignore = [
  "C901",     # complexity
  "D104",     # Missing docstring in public package
  "D107",     # Missing docstring in __init__
  "PT018",    # Break down assertions into multiple parts
  "RUF012",   # typing.ClassVar
]

select = [
    "B",   # flake8-bugbear
    "C",   # complexity
    "D",   # docstrings
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "PT",  # flake8-pytest
    "RUF", # ruff base config
    "SIM", # flake-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
    "YTT", # flake8-2020
    "ARG", # flake8-unused args
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--cov=ika"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope="session"

[tool.pyright]
venvPath = "."
venv = ".venv"
